--- a/supplemental-ui/partials/footer-scripts.hbs
+++ b/supplemental-ui/partials/footer-scripts.hbs
@@ -21,7 +21,7 @@
 //siteNavigationGroups = [{ root: true, components: "home" }, { title: "Group A", components: "component-a" }, { title: "Group B", components: "component-b" }]
 //siteNavigationGroups = [{ title: "Group A", components: "component-a" }, { title: "Group B", components: "component-b" }]
 //siteNavigationGroups = [{ root: true, components: "home" }, { title: "Group Name", components: "*" }]
-siteNavigationGroups = [{ root: true, components: "home" }, { title: "Demo", components: "component-*" }, { title: "Asciidoctor", components: "*" }]
+// siteNavigationGroups = [{ root: true, components: "home" }, { title: "Demo", components: "component-*" }, { title: "Asciidoctor", components: "*" }]
 </script>
 <script src="{{{uiRootPath}}}/js/nav.js"></script>
 <script src="{{{uiRootPath}}}/js/site.js"></script>
